chore: fix scrollbar pop effect

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 html, body, #__next {
   margin: 0;
   padding: 0;
